[gd_scene load_steps=2 format=3 uid="uid://dt2oyc685eyt7"]

[ext_resource type="Script" uid="uid://65i6ggc36fc5" path="res://player_debug.gd" id="1_wwn03"]

[node name="PlayerDebug" type="Control"]
layout_mode = 3
anchor_left = 0.0217014
anchor_top = 0.0416667
anchor_right = 0.705729
anchor_bottom = 0.175926
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wwn03")
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.032
anchor_top = -0.103
anchor_right = 0.945
anchor_bottom = 1.0
offset_left = 0.216002
offset_top = -0.0389996
offset_right = 0.339966
offset_bottom = 1.0

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 2
anchor_left = -0.003
anchor_right = 0.948
anchor_bottom = 1.0
offset_left = 0.364
offset_top = 2.0
offset_right = -0.0240479
offset_bottom = 2.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="PrevStateText" type="Label" parent="HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 7
text = "Prev State"

[node name="PrevStateValue" type="Label" parent="HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 7
text = "Prev State"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="CurrentStateText" type="Label" parent="HBoxContainer2/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 7
text = "Current State"

[node name="CurrentStateValue" type="Label" parent="HBoxContainer2/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 7
text = "Current State"

[node name="VBoxContainer4" type="VBoxContainer" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="VelocityText" type="Label" parent="HBoxContainer2/VBoxContainer4"]
layout_mode = 2
size_flags_vertical = 7
text = "Velocity"

[node name="VelocityValue" type="Label" parent="HBoxContainer2/VBoxContainer4"]
layout_mode = 2
size_flags_vertical = 7
text = "(X, Y, Z)"

[node name="VBoxContainer5" type="VBoxContainer" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="AccelerationText" type="Label" parent="HBoxContainer2/VBoxContainer5"]
layout_mode = 2
size_flags_vertical = 7
text = "Accelleration"

[node name="AccelerationValue" type="Label" parent="HBoxContainer2/VBoxContainer5"]
layout_mode = 2
size_flags_vertical = 7
text = "(X, Y, Z)"

[node name="VBoxContainer6" type="VBoxContainer" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="IsCarryingText" type="Label" parent="HBoxContainer2/VBoxContainer6"]
layout_mode = 2
size_flags_vertical = 7
text = "Is carrying"

[node name="IsCarryingValue" type="Label" parent="HBoxContainer2/VBoxContainer6"]
layout_mode = 2
size_flags_vertical = 7
text = "True (#XXX)"
